project-telegraf&influxdb/Influxdb/influxdb-k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: influxdb-ingress
  namespace: test
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - influxdb.supportlab.infoblox.com
      secretName: my-cert-tls
  rules:
    - host: influxdb.supportlab.infoblox.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: influxdb2-service
                port:
                  number: 443
